--- a/caderno_da_lourdes/src/index.css
+++ b/caderno_da_lourdes/src/index.css
@@ -66,3 +66,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+:root {
+  --cor-primaria: #ff9900;
+  --cor-texto: #4b2e05;
+  --sombra: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
